--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
     "/js/darkModeBootstrap.js": "/js/darkModeBootstrap.js",
+    "/js/showPassword.js": "/js/showPassword.js",
     "/js/layout/script.js": "/js/layout/script.js",
     "/js/layout/chart.min.js": "/js/layout/chart.min.js",
     "/css/app.css": "/css/app.css",
