--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -5,6 +5,7 @@
     "/js/layout/script.js": "/js/layout/script.js",
     "/js/layout/chart.min.js": "/js/layout/chart.min.js",
     "/css/app.css": "/css/app.css",
+    "/css/layout/cufa.css": "/css/layout/cufa.css",
     "/css/layout/style.css": "/css/layout/style.css",
     "/css/login/style.css": "/css/login/style.css",
     "/fonts/Inter-Black.woff2": "/fonts/Inter-Black.woff2",
