--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,7 +4,9 @@
     "/js/showPassword.js": "/js/showPassword.js",
     "/js/layout/script.js": "/js/layout/script.js",
     "/js/layout/chart.min.js": "/js/layout/chart.min.js",
+    "/swiper/js/swiper-bundle.js": "/swiper/js/swiper-bundle.js",
     "/css/app.css": "/css/app.css",
+    "/swiper/css/swiper-bundle.min.css": "/swiper/css/swiper-bundle.min.css",
     "/css/layout/cufa.css": "/css/layout/cufa.css",
     "/css/layout/style.css": "/css/layout/style.css",
     "/css/login/style.css": "/css/login/style.css",
