--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "sweetalert2": "^11.4.4"
+        "sweetalert2": "^11.4.4",
+        "swiper": "^8.3.2"
     }
 }
